; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/extr_lookup.c_test_object_lookup__lookup_wrong_type_by_abbreviated_id_returns_enotfound.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/extr_lookup.c_test_object_lookup__lookup_wrong_type_by_abbreviated_id_returns_enotfound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"e90810b\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@GIT_OBJECT_TAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_object_lookup__lookup_wrong_type_by_abbreviated_id_returns_enotfound() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = load i8*, i8** %1, align 8
  %6 = call i32 @strlen(i8* %5)
  %7 = call i32 @git_oid_fromstrn(i32* %2, i8* %4, i32 %6)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @GIT_ENOTFOUND, align 4
  %10 = load i32, i32* @g_repo, align 4
  %11 = load i8*, i8** %1, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = load i32, i32* @GIT_OBJECT_TAG, align 4
  %14 = call i32 @git_object_lookup_prefix(i32** %3, i32 %10, i32* %2, i32 %12, i32 %13)
  %15 = call i32 @cl_assert_equal_i(i32 %9, i32 %14)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_oid_fromstrn(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_object_lookup_prefix(i32**, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
